# me759_homework

./: CMakeLists.txt  README.md
final/: .gitignore  CMakeLists.txt  diagonal.cu  lu.cu  lucpu.cpp  lucusp.cu  makemm.cpp
homework_01/: CMakeLists.txt  hw01_p02.cpp  hw01p02.c
homework_02/: CMakeLists.txt  hw02_p01.cpp  hw02p02.c  hw02p03.c  hw02p04.c
homework_03/: .gitignore  CMakeLists.txt  example1.cu  hw03p01.cu  hw03p02.cu
homework_04/: .gitignore  CMakeLists.txt  hw04p02.cu  matrixadd.cu  matrixadd_kernel.cu
homework_05/ArrayReduction/: .gitignore  CMakeLists.txt  vector_reduction.cu  vector_reduction_kernel.cu
homework_05/Tiled_matrixmul/: .matrixmul.cu.swp  CMakeLists.txt  matrixmul.cu  matrixmul_kernel.cuh
homework_06/Convolution_2D/: .gitignore  2Dconvolution.cu  2Dconvolution.h  2Dconvolution_gold.cpp  2Dconvolutionv1.cu  2Dconvolutionv2.cu  2Dconvolutionv3.cu  CMakeLists.txt
homework_06/Profiling1Dstencil/: .gitignore  CMakeLists.txt  testV4.cu  testV5.cu  testV6.cu
homework_07/: CMakeLists.txt  analysis.cu  vector_reduction.cu  vector_reduction_gold.cpp  vector_reduction_kernel.cu
homework_08/: CMakeLists.txt  scan_largearray.cu  scan_largearray_v1.cu  scan_largearray_v2.cu  scan_largearray_v3.cu  scan_largearray_v4.cu  scan_largearray_v5.cu  scan_largearray_v6.cu  scan_largearray_v7.cu  scan_largearray_v8.cu
homework_09/: CMakeLists.txt  p4mpi.cpp  problem3.cu  scan_largearray.cu  scan_thrust.cu  vector_reduction_thrust.cu
homework_10/: CMakeLists.txt  problem1.cpp
homework_11/: CMakeLists.txt  p3mpi.cpp
